--- a/index.ipynb
+++ b/index.ipynb
@@ -76,6 +76,7 @@
     ")\n",
     "\n",
     "# initialize the public point\n",
+    "point = S256P\n",
     "# use: S256Point(x-coordinate, y-coordinate)\n",
     "\n",
     "# iterate over signatures\n",
