automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,10 +76,11 @@
     ")\n",
     "\n",
     "# initialize the public point\n",
-    "point = S256P\n",
+    "point = S256Point(px, py)\n",
     "# use: S256Point(x-coordinate, y-coordinate)\n",
     "\n",
     "# iterate over signatures\n",
+    "for z, r, s in signature\n",
     "    # u = z / s, v = r / s\n",
     "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
