--- a/index.ipynb
+++ b/index.ipynb
@@ -80,8 +80,9 @@
     "# use: S256Point(x-coordinate, y-coordinate)\n",
     "\n",
     "# iterate over signatures\n",
-    "for z, r, s in signature\n",
+    "for z, r, s in signatures:\n",
     "    # u = z / s, v = r / s\n",
+    "    u = z \n",
     "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
   },
