--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
     "# iterate over signatures\n",
     "for z, r, s in signatures:\n",
     "    # u = z / s, v = r / s\n",
-    "    u = z \n",
+    "    u = z * pow(s, N - 2, )\n",
     "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
   },
