--- a/index.ipynb
+++ b/index.ipynb
@@ -82,8 +82,9 @@
     "# iterate over signatures\n",
     "for z, r, s in signatures:\n",
     "    # u = z / s, v = r / s\n",
-    "    # remember 1/s =\n",
+    "    # remember 1/s = pow(s, N-2, N)\n",
     "    u = z * pow(s, N - 2, N) % N\n",
+    "    v = r\n",
     "    \n",
     "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
