--- a/index.ipynb
+++ b/index.ipynb
@@ -84,9 +84,10 @@
     "    # u = z / s, v = r / s\n",
     "    # remember 1/s = pow(s, N-2, N)\n",
     "    u = z * pow(s, N - 2, N) % N\n",
-    "    v = r\n",
+    "    v = r * pow(s, N-2, N) % N\n",
     "    \n",
-    "    # finally, uG+vP should have the x-coordinate equal to r"
+    "    # finally, uG+vP should have the x-coordinate equal to r\n",
+    "    print(u*)"
    ]
   },
   {
