automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,7 @@
     "    v = r * pow(s, N-2, N) % N\n",
     "    \n",
     "    # finally, uG+vP should have the x-coordinate equal to r\n",
-    "    print(u*)"
+    "    print((u*G+v*P).x.nu"
    ]
   },
   {
