automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,9 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import S256Point, G, N\n",
     "\n",
@@ -87,7 +96,7 @@
     "    v = r * pow(s, N-2, N) % N\n",
     "    \n",
     "    # finally, uG+vP should have the x-coordinate equal to r\n",
-    "    print((u*G+v*P).x.nu"
+    "    print((u*G+v*point).x.num == r)"
    ]
   },
   {
