--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
     "        # remember sig.r and sig.s are the main things we're checking\n",
     "        # remember 1/s = pow(s, N-2, N)\n",
     "        # u = z / s\n",
-    "        u \n",
+    "        s_inv = pow(s, N-2, N)\n",
     "        # v = r / s\n",
     "        # u*G + v*P should have as the x coordinate, r\n",
     "        pass"
