--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,9 @@
     "        # remember 1/s = pow(s, N-2, N)\n",
     "        # u = z / s\n",
     "        s_inv = pow(s, N-2, N)\n",
+    "        u = z * s_inv % N\n",
     "        # v = r / s\n",
+    "        v = r * s_in\n",
     "        # u*G + v*P should have as the x coordinate, r\n",
     "        pass"
    ]
