automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,13 +120,13 @@
     "        # remember sig.r and sig.s are the main things we're checking\n",
     "        # remember 1/s = pow(s, N-2, N)\n",
     "        # u = z / s\n",
-    "        s_inv = pow(ss, N-2, N)\n",
+    "        s_inv = pow(sig.s, N-2, N)\n",
     "        u = z * s_inv % N\n",
     "        # v = r / s\n",
-    "        v = r * s_inv % N\n",
+    "        v = sig.r * s_inv % N\n",
     "        # u*G + v*P should have as the x coordinate, r\n",
     "        return (u*G+v*self)\n",
-    "        pass"
+    "        pas"
    ]
   }
  ],
