automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +125,15 @@
     "        # v = r / s\n",
     "        v = sig.r * s_inv % N\n",
     "        # u*G + v*P should have as the x coordinate, r\n",
-    "        return (u*G+v*self)\n",
-    "        pas"
+    "        return (u*G+v*self).x.num == sig.r\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
